# runt-hq

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: linting.md  testing.md
src/runt_hq/: cli.py
tests/: conftest.py  test_main.py
